--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="resume">
       <div class="container">
         <div class="resume__block">
-          <h1 class="contact-info__header">John Doe</h1>
-          <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+          <h1 class="contact-info__header">Anh Pham</h1>
+          <h3 class="contact-info__sub-header">Full-Stack Web Developer</h3>
 
           <div class="contact_info_container fh">
             <div class="contact-info__block"></div>
@@ -33,9 +33,9 @@
                         80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path>
                   </svg>
                 </div>
-                <span>Lviv, Ukraine</span>
+                <span>Ho Chi Minh City, Vietnam</span>
               </a>
-              <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+              <a href="https://www.linkedin.com/in/pham-kim-anh/" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
@@ -47,7 +47,7 @@
                         62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path>
                   </svg>
                 </div>
-                <span>binary-studio</span>
+                <span>pham-kim-anh</span>
               </a>
             </div>
           </div>
@@ -67,10 +67,20 @@
                     48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
               </svg>
             </div>
-            <p class="intro_text">I'm John, a software developer driven by innovation and
-              problem-solving. With a strong background in computer science,
-              I'm dedicated to pushing boundaries and crafting elegant
-              solutions through code.</p>
+            <p class="intro_text">I'm Anh, a dynamic and innovative Front-end Web
+              Developer with experience in building
+              responsive and user-centric websites. Eager
+              to bring my expertise in modern web
+              technologies and a passion for creative
+              problem-solving to a forward-thinking
+              company. Dedicated to delivering cutting
+              edge applications and improving user
+              experience through code and design.
+              Committed to continuous learning and
+              staying abreast of industry trends to
+              contribute effectively to the team and the
+              success of the organization.
+            </p>
           </div>
         </div>
       </div>
@@ -78,7 +88,7 @@
         <div class="resume__block">
           <div class="skills">
             <h3 class="skills__header">Skills</h3>
-            <p class="skills__text">Problem solving, Continuous Learning, Team Collaboration</p>
+            <p class="skills__text">Problem solving, Continuous Learning, Team Collaboration, Web Development, Web Architecture.</p>
           </div>
         </div>
       </div>
@@ -89,18 +99,21 @@
               <h3 class="experiences__header">Experience</h3>
               <div class="experiences__company">
                 <div class="experiences__company-header">
-                  <span class="experiences__company-header-durability">2005-Present</span>
-                  <h3 class="experiences__company-header-name">Binary Studio</h3>
+                  <span class="experiences__company-header-durability">2020-Present</span>
+                  <h3 class="experiences__company-header-name">Advanced Computer Software Group Ltd.</h3>
                 </div>
 
                 <div class="experiences__company-project">
-                  <span class="experiences__company-project-role">Full-Stack Developer</span>
-                  <h3 class="experiences__company-project-name">Binary Studio Website</h3>
+                  <span class="experiences__company-project-role">Front-end Web Developer</span>
+                  <h3 class="experiences__company-project-name">Portt - An Advanced product</h3>
                   <ul class="experiences__company-project-responsibilities">
-                    <li>Backend Architecture</li>
-                    <li>Frontend Development</li>
+                    <li>Front-end Architecture</li>
+                    <li>Front-end Development</li>
+                    <li>Back-end Development</li>
                     <li>API Integration</li>
                     <li>Code Maintenance</li>
+                    <li>Code Optimization</li>
+                    <li>Bug fixing</li>
                   </ul>
                 </div>
               </div>
@@ -110,16 +123,22 @@
               <div class="additional-info__education">
                 <h3 class="additional-info__education-header">Education</h3>
                 <div class="additional-info__education-university">
-                  <span class="additional-info__education-university-durability"> 2021 </span>
+                  <span class="additional-info__education-university-durability"> 2024 </span>
                   <h3 class="additional-info__education-university-speciality">Full-Stack Development</h3>
                   <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                </div>
+                <br>
+                <div class="additional-info__education-university">
+                  <span class="additional-info__education-university-durability"> 2022-2024 </span>
+                  <h3 class="additional-info__education-university-speciality">Computer Science</h3>
+                  <p class="additional-info__education-university-name">University of the People</p>
                 </div>
               </div>
 
               <div class="additional-info__languages">
                 <h3 class="additional-info__languages-header">Languages</h3>
                 <p class="additional-info__languages-item">English</p>
-                <p class="additional-info__languages-item">Ukrainian</p>
+                <p class="additional-info__languages-item">Vietnamese</p>
               </div>
             </div>
           </div>
